[project]
name = "asteroids1"
version = "0.1.0"
description = "A class-by-class translation of Asteroids game for UChicago 51036"
readme = "README.md"
authors = [
    { name="Adam Gerber", email="adam.gerber@yahoo.com" }
]
requires-python = ">=3.9"

dependencies = [
    "Pillow==9.4.0",
    "numpy==1.24.2",
    "six==1.16.0",
    "pynput==1.7.6",
    "scipy==1.10.1",
    "simpleaudio==1.0.4",
    "pygame==2.5.2",
    "confine-controller==1.0.2"
]

[tool.uv]
# optional: place cached wheels here
cache-dir = ".cache"

[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"
